# identity-provider

./: Dockerfile  README.md  alembic.ini  dev.dockerfile  docker-compose.yaml  pyproject.toml  start.sh  stop.sh
app/: main.py
app/src/business_logic/exception/: exception_model.py  exceptions.py
app/src/business_logic/model/: operation.py  operation_type.py  resource.py  role.py  user.py
app/src/business_logic/services/: generic_test_service.py  identity_service.py  logger_service.py  operation_repository_interface.py  resource_repository_interface.py  role_repository_interface.py  user_repository_interface.py
app/src/config/: database.py  debug.py  dependency_injection.py  init.py  logging.conf  middleware.py
app/src/io/controllers/: role_controller.py  user_controller.py
app/src/io/dto/: role_dto.py  user_dto.py
app/src/io/repository/: operation_repository.py  resource_repository.py  role_repository.py  user_repository.py
app/src/io/serializer/: user_serializer.py
app/src/io/utils/: validator.py
migrations/: env.py
migrations/versions/: 726d4b4d4452_2022_09_04.py
scripts/: migrations.sh
server/: project_conf.conf  start.sh  start_dev.sh  start_prod.sh
server/dev/: uvicorn_defaults.conf
server/prod/: gunicorn_conf.py  gunicorn_defaults.conf
