[tool.poetry]
name = "identity-provider"
version = "0.1.0"
description = ""
authors = ["Christophoros <bekos.christopher@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.68.0"
pydantic = "^1.8.2"
dependency-injector = "^4.36.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
gunicorn = "^20.1.0"
SQLAlchemy = "1.4.3"
PyMySQL = {extras = ["rsa"], version = "^1.0.2"}
alembic = "^1.7.4"
pydevd-pycharm = "212.5457.59"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
